[tool.poetry]
name = "quizbot"
version = "0.1.0"
description = ""
authors = ["balancy <balancy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.3.4"
vk-api = "^11.9.6"
redis = "^3.5.3"
python-telegram-bot = "^13.8.1"
thefuzz = "^0.19.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
